Fixed overflow issue

--- a/css/output.css
+++ b/css/output.css
@@ -537,14 +537,15 @@ section {
   height: auto;
 }
 .charts [class*=-container] {
-  padding: 15px;
+  padding: 10px;
 }
 .charts [class*=-title] {
   font-weight: 500;
-  margin-top: 15PX;
+  margin-top: 15px;
 }
 .charts [class*=-chart] {
-  width: 100%;
+  max-width: 1000px;
+  position: relative;
 }
 
 .line-container {
